# php-curl-rest

./: .gitignore  .kateproject  AUTHORS  COPYING  ChangeLog  HISTORY  INSTALL  LICENSE  Makefile.am  Makefile.in  NEWS  README  README.md  THANKS  bootstrap.php  configure  configure.ac  configure.in  credits.php  index.php  info.html  make_tarball
download/: essai2.txt
plugins/: FTP.php  HTTP.php
plugins/FTP/: CD.php  CWD.php  DELE.php  DOWNLOAD.php  GET.php  LS.php  LSR.php  MKD.php  MLSD.php  NLIST.php  PUT.php  PWD.php  RAWLIST.php  RETR.php  RMD.php  RNFR.php  RNTO.php  UPLOAD.php
plugins/HTTP/: DELETE.php  GET.php  HEAD.php  MDELETE.php  MGET.php  MHEAD.php  MPOST.php  MPUT.php  POST.php  PUT.php
